# game.libretro.genplus

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/genplus/: 0001-Add-ability-to-load-resources-from-multiple-director.patch  CMakeLists.txt  genplus.txt
game.libretro.genplus/: addon.xml  addon.xml.in
game.libretro.genplus/resources/: buttonmap.xml  settings.xml
game.libretro.genplus/resources/language/English/: strings.po
gameclient.genplus/: addon.xml
